# itihas

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  bench-history.csv  benchmarks-rust-v-cyrius.md  benchmarks.md  cyrius.toml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
docs/guides/: usage.md
docs/sources/: README.md  calendars.md  campaigns.md  civilizations.md  eras.md  events.md  figures.md  general.md  sites.md  trade-routes.md
examples/: basic.rs
rust-old/: Makefile  bench-history.csv
rust-old/benches/: benchmarks.rs
rust-old/examples/: basic.rs
rust-old/src/: era.rs  event.rs  figure.rs  mcp.rs  trade.rs
rust-old/tests/: integration.rs
scripts/: bench-history.sh
src/: bench_main.cyr  calendar.cyr  calendar.rs  campaign.cyr  campaign.rs  causality.cyr  causality.rs  civilization.cyr  civilization.rs  era.cyr  era.rs  error.cyr  error.rs  event.cyr  event.rs  figure.cyr  figure.rs  hoosh.cyr  hoosh.rs  interaction.cyr  interaction.rs  lib.rs  logging.cyr  logging.rs  main.cyr  mcp.rs  serial.cyr  site.cyr  site.rs  trade.cyr  trade.rs  util.cyr
supply-chain/: config.toml
tests/: integration.rs  test.sh  test_itihas.sh
