[package]
name = "itihas"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Itihas — structured world history: civilizations, eras, events, historical figures, and calendar metadata"
homepage = "https://github.com/MacCracken/itihas"
repository = "https://github.com/MacCracken/itihas"
readme = "README.md"
documentation = "https://docs.rs/itihas"
keywords = ["history", "civilization", "chronicle", "timeline", "era"]
categories = ["science", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[features]
default = ["std"]
std = ["serde/std", "thiserror/std"]
full = ["std", "logging"]
logging = ["dep:tracing-subscriber"]

[[bench]]
name = "benchmarks"
harness = false
