[package]
name = "itihas"
version = "1.5.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Itihas — structured world history: civilizations, eras, events, historical figures, and calendar metadata"
homepage = "https://github.com/MacCracken/itihas"
repository = "https://github.com/MacCracken/itihas"
readme = "README.md"
documentation = "https://docs.rs/itihas"
keywords = ["history", "civilization", "chronicle", "timeline", "era"]
categories = ["science", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", optional = true }
bote = { version = "0.92", optional = true }
hoosh = { version = "1.2", optional = true, default-features = false, features = [] }
tokio = { version = "1", optional = true, features = ["rt"] }
thiserror = { version = "2", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[features]
default = ["std"]
std = ["serde/std", "thiserror/std"]
daimon = ["mcp", "bote/host"]
full = ["std", "logging", "hoosh", "mcp"]
logging = ["dep:tracing-subscriber"]
hoosh = ["std", "dep:serde_json"]
hoosh-llm = ["hoosh", "dep:hoosh", "dep:tokio"]
mcp = ["std", "dep:serde_json", "dep:bote"]

[[bench]]
name = "benchmarks"
harness = false
